--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# user  nginx;
+user  nginx;
 worker_processes  1;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -18,6 +18,9 @@ http {
     listen       80;
     server_name  localhost;
     location / {
+      if ($https = "") {
+        return 301 https://$host$request_uri;
+      }
       root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
