--- a/nginx.conf
+++ b/nginx.conf
@@ -17,15 +17,7 @@ http {
   server {
     listen       80;
     server_name  localhost;
-    location / {
-      root   /app;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
-    }
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   /usr/share/nginx/html;
-    }
+    return 301 https://$host$request_uri;
   }
   server {
     listen       443;
