--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ http {
     return 301 https://$host$request_uri;
   }
   server {
-    listen       443;
+    listen       443 ssl;
     server_name  localhost;
     location / {
       root   /app;
