--- a/Dockerfile-multistage
+++ b/Dockerfile-multistage
@@ -11,5 +11,5 @@ RUN ng build --prod
 FROM nginx
 RUN mkdir /app
 WORKDIR /app
-COPY dist/beerbank/. /app
+COPY --from=0 /app/dist/beerbank/. /app
 COPY nginx.conf /etc/nginx/nginx.conf
